update error messages for role type transitions to clarify restrictions on DEFAULT role